Archive2/f2/9e39a75191983f/output
main.cpp:6:9: error: stray '\' in program
         map (\(x, y) -> x ++ y) $ 
         ^
main.cpp:1:1: error: 'import' does not name a type
 import Control.Monad
 ^
